--- a/src/Makefile.yida
+++ b/src/Makefile.yida
@@ -5,16 +5,19 @@ CXXFLAGS = -I$(HOME)/tool/nifticlib-2.0.0/include -O3 -fopenmp -fPIC -g
 WARNINGFLAGS = -Wall -Werror -Wextra
 LDFLAGS=-L$(HOME)/tool/gcc-4.5.0-build/lib64 -L$(HOME)/tool/gcc-4.5.0-build/lib -L$(HOME)/tool/nifticlib-2.0.0/lib
 LD_LIBS = -lsvmp -lm -lz -lgoto2_penrynp-r1.13 -lniftiio -lznz -lth#-lgomp 
-OBJ = svm.o Preprocessing.o MatComputation.o CorrMatAnalysis.o Classification.o LibSVM.o SVMClassification.o SVMPredictor.o Scheduler.o SVMPredictorWithMasks.o Searchlight.o main.o
+OBJ = svm.o Preprocessing.o FileProcessing.o MatComputation.o CorrMatAnalysis.o Classification.o LibSVM.o SVMClassification.o SVMPredictor.o Scheduler.o SVMPredictorWithMasks.o Searchlight.o main.o
 
 corr-sum: $(OBJ)
 	$(MPICXX) -o $@ $(CXXFLAGS) $(MPIFLAGS) $(LDFLAGS) $^ $(LD_LIBS)
 
 svm.o: svm.h
-	$(GXX) -c svm.cpp -o $@ $(CXXFLAGS) $(WARNINGFLAGS)
+	$(GXX) -c svm.cpp -o $@ $(CXXFLAGS) $(WARNINGFLAGS) #-ftree-vectorizer-verbose=9
 
 Preprocessing.o: common.h Preprocessing.h
 	$(GXX) -c Preprocessing.cpp -o $@ $(CXXFLAGS) $(WARNINGFLAGS)
+
+FileProcessing.o: common.h Preprocessing.h
+	$(GXX) -c FileProcessing.cpp -o $@ $(CXXFLAGS) $(WARNINGFLAGS)
 
 MatComputation.o: common.h MatComputation.h
 	$(GXX) -c MatComputation.cpp -o $@ $(CXXFLAGS) $(WARNINGFLAGS)
