--- a/src/Makefile.rondo
+++ b/src/Makefile.rondo
@@ -5,7 +5,7 @@ CXXFLAGS = -I/usr/lib/gcc/x86_64-redhat-linux6E/4.4.6/include -I/usr/lib/gcc/x86
 WARNINGFLAGS = -Wall -Werror -Wextra #-Wno-unused-but-set-parameter
 LDFLAGS=-L/opt/pkg/NIFTICLIB/nifticlib-2.0.0/lib -L/opt/pkg/GOTOBLAS2/gotoblas2-1.13-gcc44 -L/usr/lib/gcc/x86_64-redhat-linux6E/4.4.6
 LD_LIBS = -lm -lgoto2 -lz -lniftiio -lznz -lgfortran #-lstdc++ -lgomp
-OBJ = svm.o Preprocessing.o FileProcessing.o MatComputation.o CorrMatAnalysis.o Classification.o LibSVM.o SVMClassification.o SVMPredictor.o Scheduler.o SVMPredictorWithMasks.o Searchlight.o main.o
+OBJ = svm.o Preprocessing.o FileProcessing.o MatComputation.o CorrMatAnalysis.o Classification.o LibSVM.o SVMClassification.o SVMPredictor.o Scheduler.o SVMPredictorWithMasks.o Searchlight.o CorrelationVisualization.o main.o
 
 pni_fcma: $(OBJ)
 	$(MPICXX) -o $@ $(CXXFLAGS) $(MPIFLAGS) $(LDFLAGS) $^ $(LD_LIBS)
@@ -45,6 +45,9 @@ SVMPredictorWithMasks.o: common.h SVMPredictorWithMasks.h
 
 Searchlight.o: common.h Searchlight.h
 	$(GXX) -c Searchlight.cpp -o $@ $(CXXFLAGS) $(WARNINGFLAGS)
+
+CorrelationVisualization.o: common.h CorrelationVisualization.h
+	$(GXX) -c CorrelationVisualization.cpp -o $@ $(CXXFLAGS) $(WARNINGFLAGS)
 
 main.o: common.h
 	$(MPICXX) -c main.cpp -o $@ $(CXXFLAGS) $(MPIFLAGS)
