--- a/src/Makefile.yida
+++ b/src/Makefile.yida
@@ -1,58 +1,11 @@
-GXX=g++
+# if you want to use this file then edit Makefile to include it
+# at the top
+
+CXX=g++
 MPICXX=mpic++ 
 MPIFLAGS=-I$(HOME)/tool/mpi/include
 CXXFLAGS = -I$(HOME)/tool/nifticlib-2.0.0/include -O3 -fopenmp -fPIC -g
 WARNINGFLAGS = -Wall -Werror -Wextra
 LDFLAGS=-L$(HOME)/tool/gcc-4.5.0-build/lib64 -L$(HOME)/tool/gcc-4.5.0-build/lib -L$(HOME)/tool/nifticlib-2.0.0/lib
 LD_LIBS = -lsvmp -lm -lz -lgoto2_penrynp-r1.13 -lniftiio -lznz -lth#-lgomp 
-OBJ = svm.o Preprocessing.o FileProcessing.o MatComputation.o CorrMatAnalysis.o Classification.o LibSVM.o SVMClassification.o SVMPredictor.o Scheduler.o SVMPredictorWithMasks.o Searchlight.o CorrelationVisualization.o main.o
 
-corr-sum: $(OBJ)
-	$(MPICXX) -o $@ $(CXXFLAGS) $(MPIFLAGS) $(LDFLAGS) $^ $(LD_LIBS)
-
-svm.o: svm.h
-	$(GXX) -c svm.cpp -o $@ $(CXXFLAGS) $(WARNINGFLAGS) #-ftree-vectorizer-verbose=9
-
-Preprocessing.o: common.h Preprocessing.h
-	$(GXX) -c Preprocessing.cpp -o $@ $(CXXFLAGS) $(WARNINGFLAGS)
-
-FileProcessing.o: common.h Preprocessing.h
-	$(GXX) -c FileProcessing.cpp -o $@ $(CXXFLAGS) $(WARNINGFLAGS)
-
-MatComputation.o: common.h MatComputation.h
-	$(GXX) -c MatComputation.cpp -o $@ $(CXXFLAGS) $(WARNINGFLAGS)
-
-CorrMatAnalysis.o: common.h CorrMatAnalysis.h
-	$(GXX) -c CorrMatAnalysis.cpp -o $@ $(CXXFLAGS) $(WARNINGFLAGS)
-
-Classification.o: common.h Classification.h
-	$(GXX) -c Classification.cpp -o $@ $(CXXFLAGS) $(WARNINGFLAGS)
-
-Scheduler.o: common.h Scheduler.h
-	$(MPICXX) -c Scheduler.cpp -o $@ $(CXXFLAGS) $(MPIFLAGS)
-
-LibSVM.o: common.h LibSVM.h
-	$(GXX) -c LibSVM.cpp -o $@ $(CXXFLAGS) $(WARNINGFLAGS)
-
-SVMClassification.o: common.h SVMClassification.h
-	$(GXX) -c SVMClassification.cpp -o $@ $(CXXFLAGS) $(WARNINGFLAGS)
-
-SVMPredictor.o: common.h SVMPredictor.h
-	$(GXX) -c SVMPredictor.cpp -o $@ $(CXXFLAGS) $(WARNINGFLAGS)
-
-SVMPredictorWithMasks.o: common.h SVMPredictorWithMasks.h
-	$(GXX) -c SVMPredictorWithMasks.cpp -o $@ $(CXXFLAGS) $(WARNINGFLAGS)
-
-Searchlight.o: common.h Searchlight.h
-	$(GXX) -c Searchlight.cpp -o $@ $(CXXFLAGS) $(WARNINGFLAGS)
-
-CorrelationVisualization.o: common.h CorrelationVisualization.h
-	$(GXX) -c CorrelationVisualization.cpp -o $@ $(CXXFLAGS) $(WARNINGFLAGS)
-
-main.o: common.h
-	$(MPICXX) -c main.cpp -o $@ $(CXXFLAGS) $(MPIFLAGS)
-
-PROGS=corr-sum
-
-clean:
-		rm -f $(PROGS) $(OBJ) *~
