--- a/src/Makefile.della
+++ b/src/Makefile.della
@@ -6,4 +6,4 @@ MPIFLAGS = $(LOCAL_CXXFLAGS)
 CXXFLAGS = -I/tigress/PNI/include -O3 -fopenmp -fPIC -g
 WARNINGFLAGS = -Wall -Werror -Wextra
 LDFLAGS = -L/tigress/PNI/lib $(LOCAL_LDFLAGS)
-LD_LIBS = -lgoto2 -lniftiio -lznz -lz -lgfortran
+LD_LIBS = -lgoto2 -lniftiio -lznz -lz -lgfortran -lm
