move run export into separate fcma.h header-- only include required for external programs

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,7 @@
-include Makefile.rondo
 #include Makefile.della
 #include Makefile.yida
+#include Makefile.rondo
+include Makefile.mac
 
 OBJ = svm.o Preprocessing.o FileProcessing.o MatComputation.o CorrMatAnalysis.o Classification.o LibSVM.o SVMClassification.o SVMPredictor.o Scheduler.o SVMPredictorWithMasks.o Searchlight.o CorrelationVisualization.o main.o
 
@@ -46,7 +47,7 @@ Searchlight.o: common.h Searchlight.h Searchlight.cpp
 CorrelationVisualization.o: common.h CorrelationVisualization.h CorrelationVisualization.cpp
 	$(CXX) -c CorrelationVisualization.cpp -o $@ $(CXXFLAGS) $(WARNINGFLAGS)
 
-main.o: common.h main.cpp
+main.o: common.h main.h main.cpp
 	$(MPICXX) -c main.cpp -o $@ $(CXXFLAGS) $(MPIFLAGS)
 
 PROGS=pni_fcma
