--- a/src/Makefile.rondo
+++ b/src/Makefile.rondo
@@ -7,3 +7,5 @@ CXXFLAGS = -I/usr/lib/gcc/x86_64-redhat-linux6E/4.4.6/include -I/usr/lib/gcc/x86
 WARNINGFLAGS = -Wall -Werror -Wextra #-Wno-unused-but-set-parameter
 LDFLAGS=-L/opt/pkg/NIFTICLIB/nifticlib-2.0.0/lib -L/opt/pkg/GOTOBLAS2/gotoblas2-1.13-gcc44 -L/usr/lib/gcc/x86_64-redhat-linux6E/4.4.6
 LD_LIBS = -lm -lgoto2 -lz -lniftiio -lznz -lgfortran #-lstdc++ -lgomp
+SHLIB = libfcma.so
+
