--- a/src/Makefile.yida
+++ b/src/Makefile.yida
@@ -8,4 +8,5 @@ CXXFLAGS = -I$(HOME)/tool/nifticlib-2.0.0/include -O3 -fopenmp -fPIC -g
 WARNINGFLAGS = -Wall -Werror -Wextra
 LDFLAGS=-L$(HOME)/tool/gcc-4.5.0-build/lib64 -L$(HOME)/tool/gcc-4.5.0-build/lib -L$(HOME)/tool/nifticlib-2.0.0/lib
 LD_LIBS = -lsvmp -lm -lz -lgoto2_penrynp-r1.13 -lniftiio -lznz -lth#-lgomp 
+SHLIB = libfcma.so
 
