--- a/src/Makefile.mac
+++ b/src/Makefile.mac
@@ -1,11 +1,16 @@
 # if you want to use this file then edit Makefile to include it
 # at the top
+# This Makefile assumes you have installed Mac-compiled gcc from 
+#   http://hpc.sourceforge.net
+# into /usr/local/ (the default). See the README.dependencies file
+# for more information.
 CXX=/usr/local/bin/g++
-MPICXX=/usr/local/bin/mpic++ 
-MPIFLAGS=-I/usr/local/include
-CXXFLAGS = -I/usr/local/include -O3 -fopenmp -fPIC -g
+MPICXX=/usr/local/bin/g++
+MPIFLAGS=-lmpi
+CXXFLAGS = -I/usr/local/include -O3 -fopenmp -fPIC -g -DOMPI_SKIP_MPICXX
 WARNINGFLAGS = -Wall -Werror -Wextra
 LDFLAGS=-L/usr/local/lib 
 LD_LIBS = -lm -lz -lniftiio -lznz -lgfortran -framework Accelerate
+# to make the shared lib, use "make shlib"
 SHLIB = libfcma.dylib
 
