--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 .snapshot/
-masks/
-corr-sum
-*.o
+pni_fcma
+Make.user*
+*.[oa]
+*.MIC
+*~
 !.gitignore
-
+!Make.user.intel
+!Make.user.osx
+!Make.user.linux
