--- a/src_beta/Makefile
+++ b/src_beta/Makefile
@@ -4,18 +4,18 @@ include Make.user
 
 # the above included Makefile should supply:
 # BLASINCLUDE, BLASLIBINC, BLASLDFLAGS, BLASCFLAGS
-# and optionally OTHER_INCLUDES
+# and optionally OTHER_IsNCLUDES
 
 # can override anything with ?= as well
 MPICC ?= mpic++
 NIFTILOC ?= ../deps/nifticlib-2.0.0
-WARNFLAGS ?= -Wall -Wextra
+WARNFLAGS ?= -Wall -Wextras
 OPTIMFLAGS ?= -O3 -fopenmp -pthread -ansi_alias
 EXECUTABLE ?= pni_fcma
 
 LDFLAGS = $(BLASLDFLAGS) $(BLASLIBINC) -L$(NIFTILOC)/lib -lniftiio -lznz -lz
 INCLUDES = $(BLASINCLUDE) $(OTHER_INCLUDES) -I$(NIFTILOC)/include
-CFLAGS = -std=c++11 -c -fPIC -g $(WARNFLAGS) $(OPTIMFLAGS) $(INCLUDES) $(BLASCFLAGS) -D__USE_MIC__ -D__MIIC__# -D__MEASURE_TIME__# -D__SVM_BREAKDOWN__
+CFLAGS = -std=c++11 -c -fPIC -g $(WARNFLAGS) $(OPTIMFLAGS) $(INCLUDES) $(BLASCFLAGS) -D__USE_MIC__# -D__MIIC__ -D__MEASURE_TIME__# -D__SVM_BREAKDOWN__
 
 SOURCES = main.cpp svm.cpp Preprocessing.cpp FileProcessing.cpp MatComputation.cpp CustomizedMatrixMultiply.cpp CorrMatAnalysis.cpp Classification.cpp LibSVM.cpp SVMClassification.cpp SVMPredictor.cpp Scheduler.cpp SVMPredictorWithMasks.cpp Searchlight.cpp CorrelationVisualization.cpp ErrorHandling.cpp FisherScoring.cpp Marginal_Scheduler.cpp VoxelwiseAnalysis.cpp new_svm.cpp
 
