update for writing out correlation matrix (formerly visualization)

--- a/src/Makefile
+++ b/src/Makefile
@@ -18,7 +18,7 @@ EXEPRO ?= $(EXECUTABLE)_profile
 OPTFLAGS ?= -O3 -ansi_alias -DNDEBUG
 PROFLAGS ?= -D__MEASURE_TIME__
 
-LDFLAGS = $(BLASLDFLAGS) $(BLASLIBINC) -lSegFault -L$(NIFTILOC)/lib -lniftiio -lznz -lz $(OTHER_LDFLAGS) $(BOOSTLIBINC)
+LDFLAGS = $(BLASLDFLAGS) $(BLASLIBINC) -lSegFault -L$(NIFTILOC)/lib -lniftiio -lznz -lz $(OTHER_LDFLAGS) $(BOOSTLIBINC) -lhdf5 -lhdf5_hl
 INCLUDES = $(BLASINCLUDE) $(OTHER_INCLUDES) -I$(NIFTILOC)/include
 
 CFLAGS = $(BASE_CFLAGS) $(OMP_FLAGS) $(INCLUDES) $(BLASCFLAGS)
