--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required (VERSION 2.6)
 project (FCMA)
 
-# set (CMAKE_VERBOSE_MAKEFILE on)
+set (CMAKE_VERBOSE_MAKEFILE OFF)
 
 # add the binary tree to the search path for include files
 # so that we will find TutorialConfig.h
@@ -14,16 +14,26 @@ include_directories("${PROJECT_BINARY_DIR}")
 #  "${PROJECT_BINARY_DIR}/FCMAConfig.h"
 #  )
 
-set(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} -lznz -lz -lniftiio -lhdf5 -lhdf5_hl -lboost_serialization -lboost_iostreams -lopenblas -lmpi -lomp")
-set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -fopenmp")
+# should we use MKL? otherwise we use OpenBLAS
+option (USE_MKL "Use Intel MKL" OFF)
+
+set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -lznz -lz -lniftiio -lhdf5 -lhdf5_hl -lboost_serialization -lboost_iostreams -lmpi -lomp")
+# set (CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -fopenmp -DCMM_INT_IS_LONG")
+
+if (USE_MKL)
+  set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DUSE_MKL")
+  set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -mkl=parallel")
+else ()
+  set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -lopenblas")
+endif (USE_MKL)
 
 set(CMAKE_INCLUDE_PATH "${PROJECT_SOURCE_DIR}/deps/nifticlib-2.0.0/include")
 set(CMAKE_LIBRARY_PATH "${PROJECT_SOURCE_DIR}/deps/nifticlib-2.0.0/lib")
 set(LD_LIBRARY_PATH "$CMAKE_LIBRARY_PATH:$LD_LIBRARY_PATH")
 
-#set(CMAKE_C_COMPILER clang)
-#set(CMAKE_CXX_COMPILER clang++)
+# set(CMAKE_C_COMPILER clang)
+# set(CMAKE_CXX_COMPILER clang++)
 
 include_directories ("${PROJECT_SOURCE_DIR}/deps/nifticlib-2.0.0/include")
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I${CMAKE_INCLUDE_PATH}")  # either this or last line
